# elusion

./: CHANGELOG.md  Cargo.toml  README.md  desktop.ini  sales.csv
.github/: FUNDING.yml
.github/workflows/: main.yml
benches/: benchmark.rs
src/: elusion.rs  lib.rs  main.rs  prelude.rs
src/aggregation_builder/: aggregation.rs  mod.rs
src/csvwrite/: csvwriteops.rs  mod.rs
src/custom_error/: cust_error.rs  mod.rs
src/data_query_loader/: csv_date_preprocess.rs  csv_detect_defect.rs  csv_preprocess.rs  load_query.rs  load_query2.rs  mod.rs  parse_dates.rs
src/datatypes/: datatypes.rs
src/features/: api.rs  azure.rs  calendar.rs  cashandview.rs  copydata.rs  csv.rs  dashboard.rs  delta.rs  excel.rs  fabric.rs  ftp.rs  mod.rs  mysql.rs  postgres.rs  raw_sql.rs  redis.rs  registertable.rs  scheduler.rs  sharepoint.rs  with_schema.rs  xml.rs
src/helper_funcs/: array_val_to_json.rs  build_rec_batch.rs  extrac_row_from_df.rs  extrac_val_from_df.rs  infer_schema_json.rs  mod.rs
src/loaders/: avro_loader.rs  csv_loader.rs  json_loader.rs  mod.rs  parquet_loader.rs  txt_loader.rs
src/normalizers/: normalize.rs
src/select/: aggregation.rs  mod.rs  queries.rs  select_queries.rs
src/sqlbuilder/: mod.rs  sqlbuild.rs
src/testing/: datatypes_testing.rs
