[package]
name = "elusion"
version = "0.5.0"
edition = "2021"
authors = ["Borivoj Grujicic <borivoj.grujicic@gmail.com>"]
description = "Elusion is DataFrame library, built on top of DataFusion SQL engine, for easy usage, with familiar DataFrame syntax like: PySpark, Pandas, Polars. Also RAW SQL usage is FULLY supported!"
license = "MIT"
repository = "https://github.com/DataBora/elusion"
homepage = "https://github.com/DataBora/elusion"
documentation = "https://docs.rs/elusion"
readme = "README.md"
keywords = ["data", "engineering", "dataframe", "analysis"]
categories = ["data-structures"]

[dependencies]
datafusion = "43.0.0"
arrow = "53.3.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
futures = "0.3.31"
chrono = "0.4.39"
regex = "1.11.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
deltalake = "0.23.0"
object_store = "0.11.2"
env_logger = "0.11.5"
log = "0.4.22"

[lib]
name = "elusion"
path = "src/elusion.rs"

# [profile.release]
# lto = true
# codegen-units = 1

