[package]
name = "elusion"
version = "2.4.2"
edition = "2021"
authors = ["Borivoj Grujicic <borivoj.grujicic@gmail.com>"]
description = "Elusion is a modern DataFrame library that combines the familiarity of DataFrame operations (like those in PySpark, Pandas, and Polars) with the power of SQL query building. It provides flexible query construction without enforcing strict operation ordering, enabling developers to write intuitive and maintainable data transformations."
license = "MIT"
repository = "https://github.com/DataBora/elusion"
homepage = "https://github.com/DataBora/elusion"
documentation = "https://docs.rs/elusion"
readme = "README.md"
keywords = ["data", "engineering", "dataframe", "analysis"]
categories = ["data-structures"]

[dependencies]
datafusion = "44.0.0"
arrow = "53.3.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
futures = "0.3.31"
chrono = "0.4.39"
regex = "1.11.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
deltalake = "0.23.0"
object_store = "0.11.2"
plotly = "0.12.1"
arrow-odbc = "14.1.0"
lazy_static = "1.5.0"
azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
base64 = "0.22.1"
csv = "1.1"
tokio-cron-scheduler = "0.13.0"
bytes = "1.10.0"
num_cpus = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1.3"
# log = "0.4.25"
# env_logger = "0.11.6"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "elusion"
path = "src/elusion.rs"

